infra/k8s/client/default-wide.peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "default-wide"
  namespace: "istio-system"
spec:
  mtls:
    mode: PERMISSIVE
