infra/k8s/client/bff.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-deployment
spec:
  selector:
    matchLabels:
      app: bff-deployment
  template:
    metadata:
      labels:
        app: bff-deployment
    spec:
      containers:
      - name: bff
        imagePullPolicy: Never
        image: routines/bff
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "428Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: log-persistent-storage
            mountPath: '/logs'
            subPath: bff-deployment-logs
      volumes:
        - name: log-persistent-storage
          persistentVolumeClaim:
            claimName: log-persistent-volume-claim
