infra/k8s/client/client.virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: client-virtual-service
spec:
  hosts:
  - "routines.com"
  gateways:
  - routines-gateway
  http:
  - route:
    - destination:
        host: bff-service.default.svc.cluster.local
        port:
          number: 3000
    match:
      - uri:
         prefix: '/'
