infra/k8s/client/ingress.virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bff-virtual-service
spec:
  hosts:
  - routines.com
  gateways:
  - default/routines-gateway
  http:
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        host: keycloak-service.default.svc.cluster.local
        port:
          number: 8080
      headers:
        request:
          set:
            x-forwarded-proto: "https"
            x-forwarded-port: "443"
    corsPolicy:
      allowOrigins:
        - regex: ^.*$
      allowMethods:
        - DELETE
        - PATCH
        - OPTIONS
        - POST
        - GET
      allowCredentials: true
      allowHeaders:
        - authorization
        - content-type
      maxAge: "24h"
  - match:
    - uri:
        prefix: /api
    corsPolicy:
      allowOrigins:
        - regex: ^.*$
      allowMethods:
        - DELETE
        - PATCH
        - OPTIONS
        - POST
        - GET
      allowCredentials: true
      allowHeaders:
        - authorization
        - content-type
      maxAge: "24h"
    route:
    - destination:
        host: bff-service.default.svc.cluster.local
        port:
          number: 443
      headers:
        request:
          set:
            x-forwarded-proto: "https"
            x-forwarded-port: "443"
    # https://istio.io/latest/docs/reference/config/networking/virtual-service/#CorsPolicy
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: client-cluster-ip-service.default.svc.cluster.local
        port:
          number: 3000
