infra/k8s/client/client.authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "allow-nothing"
  namespace: default #  tells which namespace the policy applies. If set to root namespace, the policy applies to all namespaces in a mesh.
spec:
  action: ALLOW
  selector:
    matchLabels:
      component: web
  rules:
    - {}
